--- a/public/html/httpswwwstatikbe.html
+++ b/public/html/httpswwwstatikbe.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Accessibility Report For "https://www.statik.be"</title>
+    <title>HTML Error Report For "https://www.statik.be"</title>
 
     <link
       rel="stylesheet"
@@ -22,9 +22,9 @@
           alt=""
           class="max-w-[120px] mr-10 block"
         />
-        <h1 class="">Accessibility Report For "https://www.statik.be"</h1>
+        <h1 class="">HTML Error Report For "https://www.statik.be"</h1>
       </div>
-      <p class="text-base opacity-50">Created at: 11&#x2F;15&#x2F;2023, 5:50:30 PM</p>
+      <p class="text-base opacity-50">Created at: 11&#x2F;16&#x2F;2023, 9:38:18 AM</p>
       <h2 class="mt-6">Tested Urls:</h2>
       <div class="mt-4">
         <div class="flex items-center">
@@ -334,7 +334,7 @@
                 <span class="sr-only">Copy selector</span>
               </button>
               <div class="overflow-auto">
-                <pre class="text-base text-yellow-700">#fui-Offerteformulier-gwgoip-fields-terms</pre>
+                <pre class="text-base text-yellow-700">#fui-Offerteformulier-apgfyn-fields-terms</pre>
               </div>
             </div>
             <div class="mt-2 text-sm opacity-60">
@@ -350,7 +350,7 @@
                 <span class="sr-only">Copy selector</span>
               </button>
               <div class="overflow-auto">
-                <pre class="text-base text-yellow-700">#fui-Offerteformulier-gwgoip-fields-nieuwsbrief</pre>
+                <pre class="text-base text-yellow-700">#fui-Offerteformulier-apgfyn-fields-nieuwsbrief</pre>
               </div>
             </div>
             <div class="mt-2 text-sm opacity-60">
